feat: Exclude vite.config.ts from tsconfig
Excludes the Vite configuration file from the TypeScript compilation process to prevent potential type checking conflicts or unnecessary processing.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
     "**/*.ts",
     "**/*.tsx"
   ],
+  "exclude": [
+    "vite.config.ts"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
